<resources>
    <string name="app_name">Proyecto1PDM</string>
    <string name="id_docente">Id Docente</string>
    <string name="nombre_docente">Nombre Docente</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="eliminar">Eliminar</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>
    <string name="id_tipo_evaluador">Id Tipo Evaluador</string>
    <string name="tipo_evaluador">Tipo Evaluador</string>
    <string name="descripcion">Descripcion</string>
    <string name="id_plan_estudio">Id Plan Estudio</string>
    <string name="anio_plan_estudio">Año Plan Estudio</string>
    <string name="id_carrera">Id Carrera</string>
    <string name="nombre_carrera">Nombre Carrera</string>
    <string name="id_ciclo">Id Ciclo</string>
    <string name="numero_ciclo">Numero Ciclo</string>
    <string name="ciclo_activo">Ciclo Activo</string>
    <string name="id_grupo">Id Grupo</string>
    <string name="fecha_creacion">Fecha de Creacion</string>
    <string name="fecha_modificacion">Fecha de Modificacion</string>
    <string name="carnet">Carnet</string>
    <string name="nombres_alumno">Nombres Alumno</string>
    <string name="apellidos_alumno">Apellidos Alumno</string>
</resources>