<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_grupo" />
        <EditText
            android:id="@+id/editId_grupo"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_ciclo" />
        <EditText
            android:id="@+id/editId_ciclo"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_carrera" />
        <EditText
            android:id="@+id/editId_carrera"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fecha_creacion" />
        <EditText
            android:id="@+id/editFecha_creacion"
            android:inputType="date"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/fecha_modificacion" />
        <EditText
            android:id="@+id/editFecha_modificacion"
            android:inputType="date"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarGrupo"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>