<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/carnet" />
        <EditText
            android:id="@+id/editCarnet"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_grupo" />
        <EditText
            android:id="@+id/editId_grupo"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_plan_estudio" />
        <EditText
            android:id="@+id/editId_plan_estudio"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombres_alumno" />
        <EditText
            android:id="@+id/editNombres_alumno"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/apellidos_alumno" />
        <EditText
            android:id="@+id/editApellidos_alumno"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarAlumno"
            android:text="@string/actualizar" />

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>

</TableLayout>