<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:stretchColumns="1" >
<TableRow>
    <TextView android:text="@string/id_ciclo" />
    <EditText
        android:id="@+id/editId_ciclo"
        android:inputType="text"
        android:maxLength="6" />
</TableRow>
<TableRow>
    <TextView android:text="@string/numero_ciclo" />
    <EditText
        android:id="@+id/editNumero_ciclo"
        android:inputType="number"
        android:maxLength="2" />
</TableRow>
<TableRow>
    <TextView android:text="@string/ciclo_activo" />
    <EditText
        android:id="@+id/editCiclo_activo"
        android:inputType="number"
        android:maxLength="1" />
</TableRow>
<TableRow>
    <Button
        android:onClick="actualizarCiclo"
        android:text="@string/actualizar" />

    <Button
        android:onClick="limpiarTexto"
        android:text="@string/limpiar" />
</TableRow>
<TableRow>

</TableRow>
</TableLayout>