<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_plan_estudio" />
        <EditText
            android:id="@+id/editId_plan_estudio"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/anio_plan_estudio" />
        <EditText
            android:id="@+id/editAnio_plan_estudio"
            android:inputType="date"
            android:maxLength="4" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarPlandeestudio"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>